iaas-aws/iac/stack/modules/networking.yaml
AWSTemplateFormatVersion: 2010-09-09

Description: Networking resources for the cct demo on iaas


Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      EnableDnsSupport: true
      EnableDnsHostnames: true
      CidrBlock: "10.10.0.0/22"

  # ------------------------ 2 public subnets and 2 private subnets
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: "10.10.0.0/24"
      AvailabilityZone: 
        Fn::Select: 
          - 0
          - Fn::GetAZs: ""

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: "10.10.1.0/24"
      AvailabilityZone: 
        Fn::Select: 
          - 1
          - Fn::GetAZs: ""

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: "10.10.2.0/24"
      AvailabilityZone: 
        Fn::Select: 
          - 0
          - Fn::GetAZs: ""

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: "10.10.3.0/24"
      AvailabilityZone: 
        Fn::Select: 
          - 1
          - Fn::GetAZs: ""

  # ------------------------ Internet Gateway
  InternetGateway:
    Type: AWS::EC2::InternetGateway

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  # ------------------------ Nat Gateway
  NatElasticIP:
    Type: AWS::EC2::EIP

  NatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatElasticIP.AllocationId
      SubnetId: !Ref PublicSubnet1

  # ------------------------ Route table for public subnets
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  PublicRouteTableGatewayRoute:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref PublicRouteTable

  PublicRouteTableSubnet1Association:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

  PublicRouteTableSubnet2Association:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2

  # ------------------------ Route table for private subnets
  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  PrivateRouteTableNatGatewayRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref NatGateway

  PrivateRouteTableSubnet1Association:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet1

  PrivateRouteTableSubnet2Association:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet2

  # ------------------------ DNS with Route53
  CustomDNS: 
    Type: AWS::Route53::HostedZone
    Properties:
      Name: internal.democct
      HostedZoneConfig: 
        Comment: Hosted zone for CCT demo
      VPCs: 
        - 
          VPCId: !Ref VPC
          VPCRegion: !Ref 'AWS::Region'

  # ------------------------ Security groups
  BaseSecGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: demo-cct-iaas-base-sec-group
      GroupDescription: Allow ping and SSH connections
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: icmp
          FromPort: 8
          ToPort: -1
          CidrIp: 0.0.0.0/0

  BaseSecGroupRuleAllowFromSameSecGroup:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Allow connections from same Security group
      GroupId: !Ref BaseSecGroup
      FromPort: 0
      IpProtocol: tcp
      ToPort: 65535
      SourceSecurityGroupId: !Ref BaseSecGroup

  SecGroupAllowTCP5000Port:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: demo-cct-iaas-sec-group-allow-tcp-5000
      GroupDescription: Allow TCP connections to port 5000
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5000
          ToPort: 5000
          CidrIp: 0.0.0.0/0

  SecGroupAllowHTTPPort:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: demo-cct-iaas-sec-group-allow-http
      GroupDescription: Allow http connections
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  # ------------------------ EC2 Instance connect
  # necessary to connect to an instance, without requiring the instance to be in a public subnet

  EC2InstanceConnect:
    Type: AWS::EC2::InstanceConnectEndpoint
    Properties:
      SubnetId: !Ref PrivateSubnet1
      SecurityGroupIds:
        - !Ref BaseSecGroup


Outputs:
  VpcId:
    Description: "The ID of the VPC"
    Value: !Ref VPC

  PublicSubnet1Id:
    Description: "The ID of the Public Subnet 1"
    Value: !Ref PublicSubnet1

  PublicSubnet2Id:
    Description: "The ID of the Public Subnet 2"
    Value: !Ref PublicSubnet2

  PrivateSubnet1Id:
    Description: "The ID of the Private Subnet 1"
    Value: !Ref PrivateSubnet1

  PrivateSubnet2Id:
    Description: "The ID of the Private Subnet 2"
    Value: !Ref PrivateSubnet2

  BaseSecGroupId:
    Description: "The ID of the Base Security Group"
    Value: !Ref BaseSecGroup

  Allow5000SecGroupId:
    Description: "The ID of the Security Group that allows TCP conns to 5000"
    Value: !Ref SecGroupAllowTCP5000Port

  AllowHTTPSecGroupId:
    Description: "The ID of the Security Group that allows Http conns"
    Value: !Ref SecGroupAllowHTTPPort

  Route53HostedZone:
    Description: "The ID of the Route53 Hosted Zone"
    Value: !Ref CustomDNS
